# rust-awesome-puzzle-game-example

./: Cargo.toml  README.md
resources/: display_config.ron
src/: assets.rs  game.rs  game_scene.rs  main.rs  scene_context.rs  sprite_ext.rs
src/game/: block.rs  event.rs  piece.rs  piece_generator.rs  piece_producer.rs  stage.rs
