[package]
name = "rust-awesome-puzzle-game-example"
version = "0.1.0"
authors = ["Yuu Shimizu <p@yuushimizu.com>"]
edition = "2018"

[dependencies]
piston_window = "0.99.0"
piston2d-sprite = "0.55.0"
euclid = "0.19.9"
find_folder = "0.3.0"
array2d = {git = "https://github.com/yuushimizu/array2d-rs"}
euclid-ext = {git = "https://github.com/yuushimizu/euclid-ext"}
rand = "0.7.0"
