[package]
name = "rust-awesome-puzzle-game-example"
version = "0.1.0"
authors = ["Yuu Shimizu <p@yuushimizu.com>"]
edition = "2018"

[dependencies]
euclid = "0.19.9"
array2d = {git = "https://github.com/yuushimizu/array2d-rs"}
euclid-ext = {git = "https://github.com/yuushimizu/euclid-ext"}
rand = "0.7.0"
amethyst = "0.11.1"

[features]
metal = ["amethyst/metal"]